# fwc2026

./: .gitignore  .nojekyll  EDA_elo_ratings_wc2026.html  EDA_elo_ratings_wc2026.ipynb  EDA_elo_scrapper.html  EDA_elo_scrapper.ipynb  Makefile  README.md  _quarto.yml  colors.py  compare_results.html  compare_results.ipynb  custom.scss  elo_utils.py  fixtures.py  index.html  index.ipynb  local-style.css  model_utils.py  pyproject.toml  report_utils.py  robots.txt  rounds.ipynb  rounds_ensemble.html  rounds_ensemble.ipynb  rounds_naive.html  rounds_naive.ipynb  search.json  sitemap.xml  sketchy-dark.scss  sketchy-light.scss  tsv_utils.py  validators.py
data/countries/: Algeria.tsv  Argentina.tsv  Australia.tsv  Austria.tsv  Belgium.tsv  Bosnia_and_Herzegovina.tsv  Brazil.tsv  Canada.tsv  Cape_Verde.tsv  Colombia.tsv  Croatia.tsv  Curacao.tsv  Czechia.tsv  DR_Congo.tsv  Ecuador.tsv  Egypt.tsv  England.tsv  France.tsv  Germany.tsv  Ghana.tsv  Haiti.tsv  Iran.tsv  Iraq.tsv  Ivory_Coast.tsv  Japan.tsv  Jordan.tsv  Mexico.tsv  Morocco.tsv  Netherlands.tsv  New_Zealand.tsv  Norway.tsv  Panama.tsv  Paraguay.tsv  Portugal.tsv  Qatar.tsv  Saudi_Arabia.tsv  Scotland.tsv  Senegal.tsv  South_Africa.tsv  South_Korea.tsv  (+8 more)
predictions/: ensemble_first_round.csv  ensemble_quarter_finals.csv  ensemble_round_of_16.csv  ensemble_round_of_32.csv  ensemble_second_round.csv  ensemble_semi_finals.csv  ensemble_third_round.csv  naive_first_round.csv  naive_quarter_finals.csv  naive_round_of_16.csv  naive_round_of_32.csv  naive_second_round.csv  naive_semi_finals.csv  naive_third_round.csv
(+10 files in other folders)
