[project]
name = "wc2026"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.14.1",
    "jupyterlab>=4.5.8",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "pytest>=9.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
